--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,8 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      # Check for updates every day
-      interval: "daily"
+      # Check for updates every month
+      interval: "monthly"
     # Specify any package update policies or configuration options
     # For example, you can limit updates to only patch and minor versions:
     # target-branch: ">=1.0.0 <2.0.0"
@@ -19,21 +19,21 @@ updates:
   - package-ecosystem: "npm"
     directory: "/node_modules/next"
     schedule:
-      # Check for updates every day
-      interval: "daily"
+      # Check for updates every month
+      interval: "monthly"
 
   # Enable updates for TypeScript
   - package-ecosystem: "npm"
     directory: "/node_modules/typescript"
     schedule:
-      # Check for updates every day
-      interval: "daily"
+      # Check for updates every month
+      interval: "monthly"
 
   # Enable updates for ESLint
   - package-ecosystem: "npm"
     directory: "/node_modules/eslint"
     schedule:
-      # Check for updates every day
+      # Check for updates every month
       interval: "monthly"
 
   # Enable updates for other dependencies as needed
